{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 511,
  "lineage": "5fccf25d-dac4-67cc-0979-c0467531e01c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ng1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0893a5a6ae33af449",
            "arn": "arn:aws:ec2:us-east-1:092201262440:elastic-ip/eipalloc-0893a5a6ae33af449",
            "domain": "vpc",
            "id": "eipalloc-0893a5a6ae33af449",
            "network_border_group": "us-east-1",
            "private_dns": "ip-10-0-10-145.ec2.internal",
            "public_dns": "ec2-52-54-255-89.compute-1.amazonaws.com",
            "public_ip": "52.54.255.89",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ng2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01448a7f3ca842cf8",
            "arn": "arn:aws:ec2:us-east-1:092201262440:elastic-ip/eipalloc-01448a7f3ca842cf8",
            "domain": "vpc",
            "id": "eipalloc-01448a7f3ca842cf8",
            "network_border_group": "us-east-1",
            "private_dns": "ip-10-0-20-27.ec2.internal",
            "public_dns": "ec2-34-194-251-142.compute-1.amazonaws.com",
            "public_ip": "34.194.251.142",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cb5cf49019e79c51",
            "arn": "arn:aws:ec2:us-east-1:092201262440:instance/i-0f43bf5b76005e560",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f43bf5b76005e560",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Web_Key_Pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f8788443525ec4af"
              }
            ],
            "primary_network_interface_id": "eni-0f8788443525ec4af",
            "private_dns": "ip-10-0-10-61.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.61",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ec803f472580051",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04462206aa03aa84d",
            "tags": {
              "Name": "bastion_host"
            },
            "tags_all": {
              "Name": "bastion_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7dd67c97ea722b0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "i-0f43bf5b76005e560",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.Web_Key_Pair",
            "aws_security_group.bastion_sg",
            "aws_subnet.public1",
            "aws_vpc.KiQ_Project",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cb5cf49019e79c51",
            "arn": "arn:aws:ec2:us-east-1:092201262440:instance/i-0bcd239a40f2a176c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-profile",
            "id": "i-0bcd239a40f2a176c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Web_Key_Pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08f3c2d888a2cd718"
              }
            ],
            "primary_network_interface_id": "eni-08f3c2d888a2cd718",
            "private_dns": "ip-10-0-100-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.234",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bcde04f57cf1593d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb26748aa293f39a",
            "tags": {
              "Name": "Web-Server-1"
            },
            "tags_all": {
              "Name": "Web-Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cd7d60dbe59baca"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "i-0bcd239a40f2a176c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ecr_access_role",
            "aws_key_pair.Web_Key_Pair",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private1",
            "aws_vpc.KiQ_Project",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cb5cf49019e79c51",
            "arn": "arn:aws:ec2:us-east-1:092201262440:instance/i-02ea19f06c35cf265",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ecr-profile",
            "id": "i-02ea19f06c35cf265",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Web_Key_Pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0155af04f7c0b203c"
              }
            ],
            "primary_network_interface_id": "eni-0155af04f7c0b203c",
            "private_dns": "ip-10-0-200-143.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.200.143",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fd6a7f3a30650bff",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048062134b423b691",
            "tags": {
              "Name": "Web-Server-2"
            },
            "tags_all": {
              "Name": "Web-Server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cd7d60dbe59baca"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "i-02ea19f06c35cf265",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ecr_access_role",
            "aws_key_pair.Web_Key_Pair",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private2",
            "aws_vpc.KiQ_Project",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:internet-gateway/igw-0c8d4f462c1b0f418",
            "id": "igw-0c8d4f462c1b0f418",
            "owner_id": "092201262440",
            "region": "us-east-1",
            "tags": {
              "Name": "KiQ_IGW"
            },
            "tags_all": {
              "Name": "KiQ_IGW"
            },
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "KiQ-ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:loadbalancer/app/KiQ-ALB/b3c6013a09094def",
            "arn_suffix": "app/KiQ-ALB/b3c6013a09094def",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "KiQ-ALB-531616721.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:092201262440:loadbalancer/app/KiQ-ALB/b3c6013a09094def",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "KiQ-ALB",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-06edffec017a159d2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04462206aa03aa84d"
              },
              {
                "subnet_id": "subnet-0f25d8879875e9ae1"
              }
            ],
            "subnets": [
              "subnet-04462206aa03aa84d",
              "subnet-0f25d8879875e9ae1"
            ],
            "tags": {
              "Name": "KiQ-ALB"
            },
            "tags_all": {
              "Name": "KiQ-ALB"
            },
            "vpc_id": "vpc-010481b0ec32ed2df",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:loadbalancer/app/KiQ-ALB/b3c6013a09094def"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:listener/app/KiQ-ALB/b3c6013a09094def/003c69c0c0d81202",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/blue-tg/dadbc5615c0825a3",
                        "weight": 0
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/green-tg/ef399a535fb974bb",
                        "weight": 100
                      }
                    ]
                  }
                ],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:092201262440:listener/app/KiQ-ALB/b3c6013a09094def/003c69c0c0d81202",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:loadbalancer/app/KiQ-ALB/b3c6013a09094def",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:listener/app/KiQ-ALB/b3c6013a09094def/003c69c0c0d81202"
          },
          "dependencies": [
            "aws_lb.KiQ-ALB",
            "aws_lb_target_group.blue_tg",
            "aws_lb_target_group.green_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/blue-tg/dadbc5615c0825a3",
            "arn_suffix": "targetgroup/blue-tg/dadbc5615c0825a3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/blue-tg/dadbc5615c0825a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:092201262440:loadbalancer/app/KiQ-ALB/b3c6013a09094def"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blue-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Blue-TG"
            },
            "tags_all": {
              "Name": "Blue-TG"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/blue-tg/dadbc5615c0825a3"
          },
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/green-tg/ef399a535fb974bb",
            "arn_suffix": "targetgroup/green-tg/ef399a535fb974bb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/green-tg/ef399a535fb974bb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:092201262440:loadbalancer/app/KiQ-ALB/b3c6013a09094def"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "green-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Green-TG"
            },
            "tags_all": {
              "Name": "Green-TG"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/green-tg/ef399a535fb974bb"
          },
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "blue_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/blue-tg/dadbc5615c0825a3,i-0bcd239a40f2a176c,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/blue-tg/dadbc5615c0825a3",
            "target_id": "i-0bcd239a40f2a176c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/blue-tg/dadbc5615c0825a3",
            "target_id": "i-0bcd239a40f2a176c"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ecr_access_role",
            "aws_instance.web1",
            "aws_key_pair.Web_Key_Pair",
            "aws_lb_target_group.blue_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private1",
            "aws_vpc.KiQ_Project",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "green_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/green-tg/ef399a535fb974bb,i-02ea19f06c35cf265,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/green-tg/ef399a535fb974bb",
            "target_id": "i-02ea19f06c35cf265"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:092201262440:targetgroup/green-tg/ef399a535fb974bb",
            "target_id": "i-02ea19f06c35cf265"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ecr_access_role",
            "aws_instance.web2",
            "aws_key_pair.Web_Key_Pair",
            "aws_lb_target_group.green_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private2",
            "aws_vpc.KiQ_Project",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0893a5a6ae33af449",
            "association_id": "eipassoc-0b7fe59e49cfe5641",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fd9862b8aa32e897",
            "network_interface_id": "eni-00742a5df597d9507",
            "private_ip": "10.0.10.226",
            "public_ip": "52.54.255.89",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04462206aa03aa84d",
            "tags": {
              "Name": "NAT gw1"
            },
            "tags_all": {
              "Name": "NAT gw1"
            },
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ng1",
            "aws_internet_gateway.gw",
            "aws_subnet.public1",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01448a7f3ca842cf8",
            "association_id": "eipassoc-051c31bacb593b859",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-03e13b771971f514d",
            "network_interface_id": "eni-0154d026f47768eea",
            "private_ip": "10.0.20.28",
            "public_ip": "34.194.251.142",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f25d8879875e9ae1",
            "tags": {
              "Name": "NAT gw2"
            },
            "tags_all": {
              "Name": "NAT gw2"
            },
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ng2",
            "aws_internet_gateway.gw",
            "aws_subnet.public2",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:route-table/rtb-01a82bf2b6e197c7d",
            "id": "rtb-01a82bf2b6e197c7d",
            "owner_id": "092201262440",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd9862b8aa32e897",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_rt1"
            },
            "tags_all": {
              "Name": "Private_rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "rtb-01a82bf2b6e197c7d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.ng1",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw1",
            "aws_subnet.public1",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:route-table/rtb-01a3e5465858a8f8f",
            "id": "rtb-01a3e5465858a8f8f",
            "owner_id": "092201262440",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03e13b771971f514d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_rt2"
            },
            "tags_all": {
              "Name": "Private_rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "rtb-01a3e5465858a8f8f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.ng2",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw2",
            "aws_subnet.public2",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:route-table/rtb-05f4f28bcde1a04fa",
            "id": "rtb-05f4f28bcde1a04fa",
            "owner_id": "092201262440",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8d4f462c1b0f418",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_rt"
            },
            "tags_all": {
              "Name": "Public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "rtb-05f4f28bcde1a04fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0963dd964ba2774ea",
            "region": "us-east-1",
            "route_table_id": "rtb-01a82bf2b6e197c7d",
            "subnet_id": "subnet-0fb26748aa293f39a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ng1",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw1",
            "aws_route_table.Private_rt1",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cac757dd16f4f61",
            "region": "us-east-1",
            "route_table_id": "rtb-01a3e5465858a8f8f",
            "subnet_id": "subnet-048062134b423b691"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ng2",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw2",
            "aws_route_table.Private_rt2",
            "aws_subnet.private2",
            "aws_subnet.public2",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rds1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011e0ba9819a5e407",
            "region": "us-east-1",
            "route_table_id": "rtb-01a82bf2b6e197c7d",
            "subnet_id": "subnet-004a8fb825cbb9a20"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ng1",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw1",
            "aws_route_table.Private_rt1",
            "aws_subnet.private_rds1",
            "aws_subnet.public1",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rds2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e60b56ec7575a6e",
            "region": "us-east-1",
            "route_table_id": "rtb-01a3e5465858a8f8f",
            "subnet_id": "subnet-0751d88b425153307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ng2",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw2",
            "aws_route_table.Private_rt2",
            "aws_subnet.private_rds2",
            "aws_subnet.public2",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d05333a7ed9a455",
            "region": "us-east-1",
            "route_table_id": "rtb-05f4f28bcde1a04fa",
            "subnet_id": "subnet-04462206aa03aa84d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Public_rt",
            "aws_subnet.public1",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01834180841150a4b",
            "region": "us-east-1",
            "route_table_id": "rtb-05f4f28bcde1a04fa",
            "subnet_id": "subnet-0f25d8879875e9ae1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Public_rt",
            "aws_subnet.public2",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:security-group/sg-06edffec017a159d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06edffec017a159d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "092201262440",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "sg-06edffec017a159d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:security-group/sg-0a7dd67c97ea722b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7dd67c97ea722b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "092201262440",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-SG"
            },
            "tags_all": {
              "Name": "Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "sg-0a7dd67c97ea722b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:security-group/sg-0261f54d95b4d4bcf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0261f54d95b4d4bcf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cd7d60dbe59baca"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "092201262440",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-SG"
            },
            "tags_all": {
              "Name": "rds-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "sg-0261f54d95b4d4bcf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:security-group/sg-03cd7d60dbe59baca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cd7d60dbe59baca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a7dd67c97ea722b0"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06edffec017a159d2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06edffec017a159d2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "092201262440",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-Server-SG"
            },
            "tags_all": {
              "Name": "Web-Server-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "sg-03cd7d60dbe59baca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:subnet/subnet-0fb26748aa293f39a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb26748aa293f39a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092201262440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private1"
            },
            "tags_all": {
              "Name": "Private1"
            },
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "subnet-0fb26748aa293f39a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:subnet/subnet-048062134b423b691",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048062134b423b691",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092201262440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private2"
            },
            "tags_all": {
              "Name": "Private2"
            },
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "subnet-048062134b423b691",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_rds1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:subnet/subnet-004a8fb825cbb9a20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004a8fb825cbb9a20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092201262440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private_rds1"
            },
            "tags_all": {
              "Name": "private_rds1"
            },
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "subnet-004a8fb825cbb9a20",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_rds2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:subnet/subnet-0751d88b425153307",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0751d88b425153307",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092201262440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private_rds2"
            },
            "tags_all": {
              "Name": "private_rds2"
            },
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "subnet-0751d88b425153307",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:subnet/subnet-04462206aa03aa84d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04462206aa03aa84d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092201262440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public1"
            },
            "tags_all": {
              "Name": "Public1"
            },
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "subnet-04462206aa03aa84d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:subnet/subnet-0f25d8879875e9ae1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f25d8879875e9ae1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092201262440",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public2"
            },
            "tags_all": {
              "Name": "Public2"
            },
            "vpc_id": "vpc-010481b0ec32ed2df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "subnet-0f25d8879875e9ae1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.KiQ_Project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "KiQ_Project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092201262440:vpc/vpc-010481b0ec32ed2df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05949871fb6b23936",
            "default_route_table_id": "rtb-0e61207c0c2c1aa3a",
            "default_security_group_id": "sg-0cef7ab035aba818d",
            "dhcp_options_id": "dopt-07ea72465e00a801b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010481b0ec32ed2df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e61207c0c2c1aa3a",
            "owner_id": "092201262440",
            "region": "us-east-1",
            "tags": {
              "Name": "KiQ_Project_VPC"
            },
            "tags_all": {
              "Name": "KiQ_Project_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "092201262440",
            "id": "vpc-010481b0ec32ed2df",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}